compiler/src/compile/snapshots/compiler__compile__type_visitor__test__symtab_fail_snapshot_tests@incorrect_types_booleans_fail.tapir.snap
---
source: crates/tapir-script/compiler/src/compile/type_visitor.rs
expression: err_str
input_file: crates/tapir-script/compiler/src/compile/snapshot_tests/type_visitor/incorrect_types_booleans_fail.tapir
---
Error: Left hand side has type int but right hand side has type fix
   ╭─[/home/gwilym/Projects/tapir-game-tools/crates/tapir-script/compiler/src/compile/snapshot_tests/type_visitor/incorrect_types_booleans_fail.tapir:1:1]
   │
 1 │ var x = (3 + 5) + (3 * 3.5);
   │                    ───┬───  
   │                       ╰───── Mismatching types on binary operator
───╯
