compiler/src/compile/snapshots/compiler__compile__type_visitor__test__symtab_fail_snapshot_tests@method_call_wrong_type_fail.tapir.snap
---
source: compiler/src/compile/type_visitor.rs
expression: err_str
input_file: compiler/src/compile/snapshot_tests/type_visitor/method_call_wrong_type_fail.tapir
---
[E0045] Error: type `fix` has no method `add`
   ╭─[ method_call_wrong_type_fail.tapir:8:16 ]
   │
 8 │ var result = x.add(10);
   │              ┬  
   │              ╰── This has type fix
───╯
