compiler/src/compile/snapshots/compiler__compile__type_visitor__test__symtab_fail_snapshot_tests@missing_return_fail.tapir.snap
---
source: crates/tapir-script/compiler/src/compile/type_visitor.rs
expression: err_str
input_file: crates/tapir-script/compiler/src/compile/snapshot_tests/type_visitor/missing_return_fail.tapir
---
[E0015] Error: Function foo should return results, but not all branches return.
   ╭─[ missing_return_fail.tapir:1:4 ]
   │
 1 │ fn foo() -> fix {}
   │             ─┬─  
   │              ╰─── Function returns results
───╯
[E0015] Error: Function bar should return results, but not all branches return.
   ╭─[ missing_return_fail.tapir:3:4 ]
   │
 3 │ fn bar() -> int {
   │             ─┬─  
   │              ╰─── Function returns results
───╯
