compiler/src/compile/snapshots/compiler__compile__type_visitor__test__symtab_fail_snapshot_tests@multi_assign_count_mismatch_fail.tapir.snap
---
source: crates/tapir-script/compiler/src/compile/type_visitor.rs
expression: err_str
input_file: crates/tapir-script/compiler/src/compile/snapshot_tests/type_visitor/multi_assign_count_mismatch_fail.tapir
---
Error: Expected 2 expressions, but got 3 of them
   ╭─[ multi_assign_count_mismatch_fail.tapir:2:1 ]
   │
 2 │ var a, b = 1, 2, 3;
   │ ─────────┬─────────  
   │          ╰─────────── This assignment
   │ 
   │ Help: When assigning to multiple variables, both sides of the '=' must have the same number of arguments
───╯
